# Financial-Report-ChatBot-Using-RAG-For-10-K-SEC-Filings

./: .gitignore  .pre-commit-config.yaml  README.md  handbook.md  pyproject.toml  requirements.txt
C:/Users/patri/Desktop/Financial-Report-ChatBot-Using-RAG/data/: metadata.csv
C:/Users/patri/Desktop/Financial-Report-ChatBot-Using-RAG/data/processed/AAPL/2025/: 10-K.txt
C:/Users/patri/Desktop/Financial-Report-ChatBot-Using-RAG/data/processed/BA/2025/: 10-K.txt
C:/Users/patri/Desktop/Financial-Report-ChatBot-Using-RAG/data/processed/NVDA/2025/: 10-K.txt
chroma_financial_db/ce20d93c-cf41-4cc4-8dc5-e8760c700928/: index_metadata.pickle
data/: metadata.csv
data/AAPL/2024/: 2024-11-01_0000320193-24-000123_10-K_clean.txt
data/AAPL/2025/: 2025-10-31_0000320193-25-000079_10-K_clean.txt
data/BA/2024/: 2024-01-31_0000012927-24-000010_10-K_clean.txt
data/BA/2025/: 2025-02-03_0000012927-25-000015_10-K_clean.txt
data/NVDA/2024/: 2024-02-21_0001045810-24-000029_10-K_clean.txt
data/NVDA/2025/: 2025-02-26_0001045810-25-000023_10-K_clean.txt
data/WMT/2024/: 2024-03-15_0000104169-24-000056_10-K_clean.txt
data/WMT/2025/: 2025-03-14_0000104169-25-000021_10-K_clean.txt
data/processed/AAPL/2025/: 10-K.txt
data/processed/BA/2025/: 10-K.txt
data/processed/NVDA/2025/: 10-K.txt
data/processed/WMT/2025/: 10-K.txt
src/: sec_10k_scraper.py
src/agent/: build_the_langgraph_graphs.py  generator.py  main_graph_nodes_and_edges.py  prompt.py  state.py  tools.py
src/ingestion/: chunker.py  parser.py
(+1 files in other folders)
